# static-site-generator

./: .gitignore  pyproject.toml
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
src/: copy_files.py  generate_page.py  htmlnode.py  inline_markdown.py  main.py  markdown_blocks.py  test_generate_content.py  test_htmlnode.py  test_inline_markdown.py  test_markdown_blocks.py  test_textnode.py  textnode.py
